# ur5_rg2_ign

./: CMakeLists.txt  README.md  package.xml
scripts/: estimate_inertial_properties.py
ur5_rg2/: model.sdf
ur5_rg2/meshes/collision/rg2/: finger.stl  finger_neutral.stl
urdf/: ur5_rg2.urdf
